new features added, fixed some bugs, structure improvements

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -2,44 +2,67 @@
   background: #fff;
   padding: 10px;
   margin: 10px;
+  overflow-x: hidden;
+  word-wrap: break-word;
 }
-.home-row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.home-row-2{
-    display: grid;
-    grid-template-columns: 50% 50%;
+.home-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .home-col-1 {
   flex: 4;
 }
 
-.home-exercises{
-    border: 1px solid black;
-    margin: 20px;
-    padding: 20px;
+.home-row-2 {
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
-.home-exercises-ul{
+
+.home-exercises {
+  border: 1px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+.home-exercises-ul {
   list-style: none;
 }
+
+.home-exercises-span {
+  margin: 20px;
+}
+
 .home-exercises-ul > li {
   margin: 10px;
 }
 
 p {
-    padding: 10px;
-    margin: 10px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .home-col-2 {
   flex: 1;
-  
 }
-.home-col-2 > img{
-    object-fit: cover;
-    width: 450px; 
+.home-col-2 > img {
+  object-fit: cover;
+  width: 100%;
+  min-width: 350px;
+}
+
+@media (max-width: 900px) {
+  .home {
+    padding: 4px;
+    margin: 4px;
+  }
+  .home-row {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .home-row-2 {
+    display: grid;
+    grid-template-columns: 100%;
+  }
 }
